# sam-bedrock-gr-hallucination

./: README.md  pyproject.toml  samconfig.toml  template.yaml
custom_resource/: index.py
function/: index.py
function/src/: output.txt  query.txt
