[tool.poetry]
name = "bedrock-gr-apply"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "function/*" }
]

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
mypy = "^1.11.1"
isort = "^5.13.2"
pyproject-flake8 = "^7.0.0"
pyproject-autoflake = "^1.0.2"
boto3 = "^1.34.153"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = "E203,E501,W503,T499"

[tool.mypy]
# common
python_version = 3.12
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
